--- a/.github/workflows/5.yml
+++ b/.github/workflows/5.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 #定时触发开始编译
-  schedule:
-  - cron: 0 17 14 * *
+#  schedule:
+#  - cron: 0 17 14 * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
@@ -86,7 +86,7 @@ jobs:
       run: cd openwrt && ./scripts/feeds update -a
 
     - name: 安装软件源
-      run: cd openwrt && ./scripts/feeds install -a -f && ./scripts/feeds install -a -f
+      run: cd openwrt && ./scripts/feeds install -a && ./scripts/feeds install -a
 
     - name: 加载自定义配置
       run: |
@@ -95,10 +95,7 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-        
-    - name: 再次安装软件源
-      run: cd openwrt && ./scripts/feeds install -a -f && $GITHUB_WORKSPACE/$DIY_P2_SH && ./scripts/feeds install -a -f
-
+      
     - name: 下载包
       id: package
       run: |
@@ -107,15 +104,13 @@ jobs:
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
-        make download -j4
         make dirclean
         
     - name: 整合固件
       id: compile
       run: |
         cd openwrt
-        echo -e "$(nproc) thread compile"
-        make -j1 || make -j1 V=s || make -j$(nproc) V=sc
+        make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: 检查可用容量
@@ -174,13 +169,13 @@ jobs:
     - name: 删除任务
       uses: FunctionXJB/delete-workflow-runs@main
       with:
-        retain_days: 18
+        retain_days: 1
         keep_minimum_runs: 3
         
-    - name: 'Server酱通知'
-      uses: easychen/github-action-server-chan@v1.0.0
-      if: steps.compile.outputs.status == 'success' && !cancelled()
-      with:
-         desp: 🎉华硕RT-ACRH17固件编译成功，尽情搞机吧🎉
-         sendkey: ${{ secrets.sendkey }}
-         title: " ACRH17第五版固件编译成功"
+#    - name: 'Server酱通知'
+#      uses: easychen/github-action-server-chan@v1.0.0
+#      if: steps.compile.outputs.status == 'success' && !cancelled()
+#      with:
+#         desp: 🎉华硕RT-ACRH17固件编译成功，尽情搞机吧🎉
+#         sendkey: ${{ secrets.sendkey }}
+#         title: " ACRH17第五版固件编译成功"
