--- a/5.config
+++ b/5.config
@@ -2,30 +2,29 @@ CONFIG_TARGET_ipq40xx=y
 CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-acrh17=y
 CONFIG_TARGET_BOARD="ipq40xx"
 CONFIG_IB=y
-CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_luci-app-aliddns=y
-CONFIG_PACKAGE_luci-app-baidupcs-web=y
-CONFIG_PACKAGE_luci-app-broadbandacc=y
-CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-kodexplorer=y
-CONFIG_PACKAGE_luci-app-minidlna=y
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-mwan3helper=y
-CONFIG_PACKAGE_luci-app-ramfree=y
-CONFIG_PACKAGE_luci-app-parentcontrol=y
-CONFIG_PACKAGE_luci-app-bypass=y
-CONFIG_PACKAGE_luci-app-aliyundrive-fuse=y
-CONFIG_PACKAGE_luci-app-pushbot=y
-CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_appfilter=y
-CONFIG_PACKAGE_kmod-oaf=y
-CONFIG_PACKAGE_speedtest-go=y
-CONFIG_DEFAULT_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-easymesh=y
-CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_luci-app-verysync=y
-CONFIG_PACKAGE_luci-app-unblockmusic=y
-CONFIG_PACKAGE_luci-app-ssr-plus=y
+# CONFIG_PACKAGE_ipv6helper=y
+# CONFIG_PACKAGE_luci-app-aliddns=y
+# CONFIG_PACKAGE_luci-app-baidupcs-web=y
+# CONFIG_PACKAGE_luci-app-broadbandacc=y
+# CONFIG_PACKAGE_luci-app-diskman=y
+# CONFIG_PACKAGE_luci-app-frpc=y
+# CONFIG_PACKAGE_luci-app-kodexplorer=y
+# CONFIG_PACKAGE_luci-app-minidlna=y
+# CONFIG_PACKAGE_luci-app-mwan3helper=y
+# CONFIG_PACKAGE_luci-app-ramfree=y
+# CONFIG_PACKAGE_luci-app-parentcontrol=y
+# CONFIG_PACKAGE_luci-app-bypass=y
+# CONFIG_PACKAGE_luci-app-aliyundrive-fuse=y
+# CONFIG_PACKAGE_luci-app-pushbot=y
+# CONFIG_PACKAGE_luci-app-adguardhome=y
+# CONFIG_PACKAGE_appfilter=y
+# CONFIG_PACKAGE_kmod-oaf=y
+# CONFIG_PACKAGE_speedtest-go=y
+# CONFIG_DEFAULT_luci-app-ddns=y
+# CONFIG_PACKAGE_luci-app-syncdial=y
+# CONFIG_PACKAGE_luci-app-verysync=y
+# CONFIG_PACKAGE_luci-app-unblockmusic=y
+# CONFIG_PACKAGE_luci-app-ssr-plus=y
 # CONFIG_DEFAULT_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_iptvhelper is not set
