--- a/1.config
+++ b/1.config
@@ -27,4 +27,4 @@ CONFIG_PACKAGE_luci-app-verysync=y
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 # CONFIG_DEFAULT_luci-app-adbyby-plus is not set
-# CONFIG_PACKAGE_iptvhelper is not set
+CONFIG_PACKAGE_iptvhelper=y
