--- a/1.config
+++ b/1.config
@@ -2,7 +2,7 @@ CONFIG_TARGET_ipq40xx=y
 CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-acrh17=y
 CONFIG_TARGET_BOARD="ipq40xx"
 CONFIG_IB=y
-# CONFIG_PACKAGE_luci-app-easymesh=y
+CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_luci-app-aliddns=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
