--- a/4.config
+++ b/4.config
@@ -28,3 +28,8 @@ CONFIG_PACKAGE_luci-app-aliddns=y
 # CONFIG_PACKAGE_luci-app-ssr-plus=y
 # CONFIG_DEFAULT_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_iptvhelper is not set
+###
+CONFIG_LINUX_5_4=n
+CONFIG_LINUX_5_15=y
+CONFIG_KERNEL_TESTING=y
+CONFIG_PACKAGE_luci-app-netspeedtest=y
