--- a/.github/workflows/1.yml
+++ b/.github/workflows/1.yml
@@ -150,7 +150,8 @@ jobs:
         Rtime=$(date +%Y.%m.%d-%H:%M)
         release_tag="rt-acrh17-t1-OpenWrt-$time"
         release_name="rt-acrh17-t1-OpenWrt-$Rtime"
-        echo "默认网关：192.168.100.2
+        echo "更新内核到5.15
+        默认网关：192.168.100.2
         默认用户名|密码：root | password" >> release.txt
         echo "release_name=$release_name" >> $GITHUB_OUTPUT
         echo "release_tag=$release_tag" >> $GITHUB_OUTPUT
