--- a/.github/workflows/1.yml
+++ b/.github/workflows/1.yml
@@ -151,6 +151,13 @@ jobs:
         release_tag="rt-acrh17-t1-OpenWrt-$time"
         release_name="rt-acrh17-t1-OpenWrt-$Rtime"
         echo "更新内核到5.15
+        
+        简单Mesh、阿里动态域名、百度网盘、宽带提速小助手、
+        Frpc内网穿透、可道云私有云盘、Bypass科学、家长控制、
+        全能推送、adguardhome去广告、应用过滤、动态域名、
+        多线多拨、微力同步、解锁灰色网易云音乐、SSR-Plus科学、
+        去广告plus、网速测试、IPTV助手、小猫咪、阿里云盘fuse。
+        
         默认网关：192.168.100.2
         默认用户名|密码：root | password" >> release.txt
         echo "release_name=$release_name" >> $GITHUB_OUTPUT
@@ -174,10 +181,10 @@ jobs:
         retain_days: 18
         keep_minimum_runs: 3
         
-#    - name: 'Server酱通知'
-#      uses: easychen/github-action-server-chan@v1.0.0
-#      if: steps.compile.outputs.status == 'success' && !cancelled()
-#      with:
-#         desp: 🎉华硕RT-ACRH17固件编译成功，尽情搞机吧🎉
-#         sendkey: ${{ secrets.sendkey }}
-#         title: " ACRH17第一版固件编译成功"
+    - name: 'Server酱通知'
+      uses: easychen/github-action-server-chan@v1.0.0
+      if: steps.compile.outputs.status == 'success' && !cancelled()
+      with:
+         desp: 🎉华硕RT-ACRH17固件编译成功，尽情搞机吧🎉
+         sendkey: ${{ secrets.sendkey }}
+         title: " ACRH17第一版高大全固件编译成功"
