--- a/2.config
+++ b/2.config
@@ -14,17 +14,23 @@ CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-ramfree=y
 CONFIG_PACKAGE_luci-app-parentcontrol=y
-# CONFIG_PACKAGE_luci-app-bypass=y
-# CONFIG_PACKAGE_luci-app-aliyundrive-fuse=y
-# CONFIG_PACKAGE_luci-app-pushbot=y
-# CONFIG_PACKAGE_luci-app-adguardhome=y
-# CONFIG_PACKAGE_appfilter=y
-# CONFIG_PACKAGE_kmod-oaf=y
-# CONFIG_PACKAGE_speedtest-go=y
-# CONFIG_DEFAULT_luci-app-ddns=y
-# CONFIG_PACKAGE_luci-app-syncdial=y
-# CONFIG_PACKAGE_luci-app-verysync=y
-# CONFIG_PACKAGE_luci-app-unblockmusic=y
-# CONFIG_PACKAGE_luci-app-ssr-plus=y
-# CONFIG_DEFAULT_luci-app-adbyby-plus is not set
-# CONFIG_PACKAGE_iptvhelper is not set
+CONFIG_PACKAGE_luci-app-bypass=y
+CONFIG_PACKAGE_luci-app-aliyundrive-fuse=y
+CONFIG_PACKAGE_luci-app-pushbot=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_appfilter=y
+CONFIG_PACKAGE_kmod-oaf=y
+CONFIG_PACKAGE_speedtest-go=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-syncdial=y
+CONFIG_PACKAGE_luci-app-verysync=y
+CONFIG_PACKAGE_luci-app-unblockmusic=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+CONFIG_DEFAULT_luci-app-adbyby-plus=y
+CONFIG_PACKAGE_iptvhelper=y
+##
+CONFIG_LINUX_5_4=n
+CONFIG_LINUX_5_15=y
+CONFIG_KERNEL_TESTING=y
+CONFIG_PACKAGE_luci-app-netspeedtest=y
+CONFIG_PACKAGE_luci-app-openclash=y
