--- a/5.config
+++ b/5.config
@@ -2,9 +2,9 @@ CONFIG_TARGET_ipq40xx=y
 CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-acrh17=y
 CONFIG_TARGET_BOARD="ipq40xx"
 CONFIG_IB=y
-CONFIG_LINUX_5_4=n
-CONFIG_LINUX_5_15=y
-CONFIG_KERNEL_TESTING=y
+#CONFIG_LINUX_5_4=n
+#CONFIG_LINUX_5_15=y
+#CONFIG_KERNEL_TESTING=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
 # CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_ipv6helper=y
