--- a/2.config
+++ b/2.config
@@ -29,8 +29,8 @@ CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_DEFAULT_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_iptvhelper=y
 ##
-CONFIG_LINUX_5_4=n
-CONFIG_LINUX_5_15=y
-CONFIG_KERNEL_TESTING=y
+#CONFIG_LINUX_5_4=n
+#CONFIG_LINUX_5_15=y
+#CONFIG_KERNEL_TESTING=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-openclash=y
