--- a/.github/workflows/5.yml
+++ b/.github/workflows/5.yml
@@ -27,7 +27,7 @@ env:
 #  REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
+  FEEDS_CONF: feeds.conf.immortalwrt
   CONFIG_FILE: 5.config
   DIY_P1_SH: im1.sh
   DIY_P2_SH: im2.sh
