--- a/5.config
+++ b/5.config
@@ -6,7 +6,7 @@ CONFIG_IB=y
 #CONFIG_LINUX_5_15=y
 #CONFIG_KERNEL_TESTING=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
-# CONFIG_PACKAGE_luci-app-easymesh=y
+CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_ipv6helper=y
 # CONFIG_PACKAGE_luci-app-aliddns=y
 # CONFIG_PACKAGE_luci-app-baidupcs-web=y
