--- a/.github/workflows/2.yml
+++ b/.github/workflows/2.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: ACRH17第二版
+name: ACRH17第一版
 
 on:
   repository_dispatch:
@@ -26,10 +26,10 @@ on:
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: 2.config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  FEEDS_CONF: feeds.conf.immortalwrt
+  CONFIG_FILE: 1.config
+  DIY_P1_SH: im1.sh
+  DIY_P2_SH: im2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
@@ -67,14 +67,14 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-
+    
     - name: 缓存
       uses: klever1988/cachewrtbuild@main
       with:
         ccache: 'true'
-        mixkey: 'acrh17_2'
-        prefix: 'openwrt'
-
+        mixkey: 'acrh17_1'
+        prefix: ${{ github.workspace }}/openwrt
+        
     - name: 加载软件源
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
@@ -105,13 +105,13 @@ jobs:
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
         make dirclean
-        
+
     - name: 整合固件
       id: compile
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 V=99
+        make -j$(nproc) || make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: 检查可用容量
@@ -130,8 +130,7 @@ jobs:
         rm -rf sha256sums
         rm -rf version.buildinfo
         sleep 2
-        mv *.bin 2-ACRH17-$(date +%Y.%m.%d-%H.%M).bin
-        mv *.trx 2-ACRH17-$(date +%Y.%m.%d-%H.%M).trx
+        mv *.bin 1-ACRH17-$(date +%Y.%m.%d-%H.%M).bin
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
@@ -148,9 +147,16 @@ jobs:
       run: |
         time=$(date +%Y.%m.%d)
         Rtime=$(date +%Y.%m.%d-%H:%M)
-        release_tag="rt-acrh17-t2-OpenWrt-$time"
-        release_name="rt-acrh17-t2-OpenWrt-$Rtime"
-        echo "5.15 内核
+        release_tag="rt-acrh17-t1-OpenWrt-$time"
+        release_name="rt-acrh17-t1-OpenWrt-$Rtime"
+        echo "更新内核到5.15
+        
+        简单Mesh、阿里动态域名、百度网盘、宽带提速小助手、
+        Frpc内网穿透、可道云私有云盘、Bypass科学、家长控制、
+        全能推送、adguardhome去广告、应用过滤、动态域名、
+        多线多拨、微力同步、解锁灰色网易云音乐、SSR-Plus科学、
+        去广告plus、网速测试、IPTV助手、小猫咪、阿里云盘fuse。
+        
         默认网关：192.168.100.2
         默认用户名|密码：root | password" >> release.txt
         echo "release_name=$release_name" >> $GITHUB_OUTPUT
@@ -171,13 +177,13 @@ jobs:
     - name: 删除任务
       uses: FunctionXJB/delete-workflow-runs@main
       with:
-        retain_days: 1
+        retain_days: 18
         keep_minimum_runs: 3
         
-#    - name: 'Server酱通知'
-#      uses: easychen/github-action-server-chan@v1.0.0
-#      if: steps.compile.outputs.status == 'success' && !cancelled()
-#      with:
-#         desp: 🎉华硕RT-ACRH17固件编译成功，尽情搞机吧🎉
-#         sendkey: ${{ secrets.sendkey }}
-#         title: " ACRH17第二版固件编译成功"
+    - name: 'Server酱通知'
+      uses: easychen/github-action-server-chan@v1.0.0
+      if: steps.compile.outputs.status == 'success' && !cancelled()
+      with:
+         desp: 🎉华硕RT-ACRH17固件编译成功，尽情搞机吧🎉
+         sendkey: ${{ secrets.sendkey }}
+         title: " ACRH17第一版高大全固件编译成功"
