--- a/5.config
+++ b/5.config
@@ -31,5 +31,5 @@ CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-verysync=y
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_DEFAULT_luci-app-adbyby-plus is not set
-CONFIG_PACKAGE_iptvhelper is not set
+CONFIG_DEFAULT_luci-app-adbyby-plus=n
+CONFIG_PACKAGE_iptvhelper=y
