--- a/2.config
+++ b/2.config
@@ -1,5 +1,5 @@
 CONFIG_TARGET_ipq40xx=y
-#CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-acrh17=y
+CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-acrh17=y
 #CONFIG_TARGET_BOARD="ipq40xx"
 CONFIG_TARGET_ipq40xx_generic_DEVICE_asus_rt-ac42u=y
 CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-ac42u=y
@@ -36,3 +36,4 @@ CONFIG_PACKAGE_iptvhelper=y
 #CONFIG_KERNEL_TESTING=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_luci-app-chatgpt=y
