--- a/2.config
+++ b/2.config
@@ -1,8 +1,9 @@
 CONFIG_TARGET_ipq40xx=y
 CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-acrh17=y
+CONFIG_TARGET_ipq40xx_generic_DEVICE_asus_rt-acrh17=y
 #CONFIG_TARGET_BOARD="ipq40xx"
-CONFIG_TARGET_ipq40xx_generic_DEVICE_asus_rt-ac42u=y
-CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-ac42u=y
+#CONFIG_TARGET_ipq40xx_generic_DEVICE_asus_rt-ac42u=y
+#CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-ac42u=y
 CONFIG_IB=y
 CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_ipv6helper=y
