--- a/3.config
+++ b/3.config
@@ -1,8 +1,10 @@
 CONFIG_TARGET_ipq40xx=y
 CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-acrh17=y
 CONFIG_TARGET_BOARD="ipq40xx"
+CONFIG_TARGET_ipq40xx_generic_DEVICE_asus_rt-acrh17=y
 CONFIG_IB=y
 CONFIG_PACKAGE_luci-app-easymesh=y
+CONFIG_PACKAGE_luci-i18n-easymesh-zh-cn=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_luci-app-aliddns=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
