--- a/.config
+++ b/.config
@@ -6,4 +6,4 @@ CONFIG_IB=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_luci-i18n-easymesh-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
