--- a/.github/workflows/3.yml
+++ b/.github/workflows/3.yml
@@ -27,8 +27,8 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: 3.feeds
-  CONFIG_FILE: 3.config
-  DIY_P1_SH: 3-1.sh
+  CONFIG_FILE: .config
+  DIY_P1_SH: gf1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
@@ -37,7 +37,7 @@ env:
   
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - name: 检查
