--- a/.github/workflows/gf.yml
+++ b/.github/workflows/gf.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 #定时触发开始编译
-#  schedule:
-#  - cron: 0 10 14 * *
+  schedule:
+   - cron: 40 19 14 * *
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt.git
