--- a/2.config
+++ b/2.config
@@ -6,7 +6,7 @@ CONFIG_TARGET_ipq40xx_generic_DEVICE_asus_rt-acrh17=y
 #CONFIG_TARGET_ipq40xx_DEVICE_asus_rt-ac42u=y
 CONFIG_IB=y
 CONFIG_PACKAGE_luci-app-easymesh=y
-CONFIG_PACKAGE_luci-i18n-easymesh-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-easymesh-zh-cn=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_luci-app-aliddns=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
@@ -30,8 +30,8 @@ CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-verysync=y
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_DEFAULT_luci-app-adbyby-plus=y
-CONFIG_PACKAGE_iptvhelper=y
+CONFIG_DEFAULT_luci-app-adbyby-plus=n
+CONFIG_PACKAGE_iptvhelper=n
 ##
 #CONFIG_LINUX_5_4=n
 #CONFIG_LINUX_5_15=y
