--- a/.github/workflows/acrh17.yml
+++ b/.github/workflows/acrh17.yml
@@ -20,14 +20,15 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/zzcand111/lede.git
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: master
-  CONFIG_FILE: .config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  FEEDS_CONF: feeds.conf.immortalwrt
+  CONFIG_FILE: 11.config
+  DIY_P1_SH: im1.sh
+  DIY_P2_SH: im2.sh
+  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
-  FILE_NAME: 360v6
   TZ: Asia/Shanghai
 
 jobs:
